--- a/src/Aspire.Dashboard/Components/Controls/ResourceDetails.razor
+++ b/src/Aspire.Dashboard/Components/Controls/ResourceDetails.razor
@@ -71,19 +71,6 @@
                     HighlightText="@_filter"
                     GridTemplateColumns="1fr 1.5fr" />
             </FluentAccordionItem>
-            <FluentAccordionItem Heading="@ControlStringsLoc[nameof(ControlsStrings.ResourceDetailsEnvironmentVariablesHeader)]" Expanded="@_isEnvironmentVariablesExpanded">
-                <div slot="end">
-                    <FluentBadge Appearance="Appearance.Neutral" Circular="true">
-                        @FilteredEnvironmentVariables.Count()
-                    </FluentBadge>
-                </div>
-                <PropertyGrid
-                    TItem="EnvironmentVariableViewModel"
-                    Items="@FilteredEnvironmentVariables"
-                    IsValueMaskedChanged="@OnValueMaskedChanged"
-                    HighlightText="@_filter"
-                    GridTemplateColumns="1fr 1.5fr" />
-            </FluentAccordionItem>
             @if (Resource.IsContainer())
             {
                 <FluentAccordionItem Heading="@ControlStringsLoc[nameof(ControlsStrings.ResourceDetailsVolumesHeader)]" Expanded="@_isVolumesExpanded">
@@ -175,6 +162,19 @@
                         </AspireTemplateColumn>
                     </FluentDataGrid>
                 }
+            </FluentAccordionItem>
+            @* Env vars can contain many boilerplate values, e.g. OTEL variables for a .NET project. Display last so not to hide more useful information. *@
+            <FluentAccordionItem Heading="@ControlStringsLoc[nameof(ControlsStrings.ResourceDetailsEnvironmentVariablesHeader)]" Expanded="@_isEnvironmentVariablesExpanded">
+                <div slot="end">
+                    <FluentBadge Appearance="Appearance.Neutral" Circular="true">
+                        @FilteredEnvironmentVariables.Count()
+                    </FluentBadge>
+                </div>
+                <PropertyGrid TItem="EnvironmentVariableViewModel"
+                              Items="@FilteredEnvironmentVariables"
+                              IsValueMaskedChanged="@OnValueMaskedChanged"
+                              HighlightText="@_filter"
+                              GridTemplateColumns="1fr 1.5fr" />
             </FluentAccordionItem>
         </FluentAccordion>
     </div>
