--- a/src/Aspire.Dashboard/Components/Pages/Resources.razor.css
+++ b/src/Aspire.Dashboard/Components/Pages/Resources.razor.css
@@ -161,3 +161,7 @@
     stroke-width: 2;
     marker-end: url(#arrow-highlight-expand);
 }
+
+::deep .tab-label > svg {
+    margin-right: calc(var(--design-unit) * 1px);
+}
